--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
 php/socket/SmartStudioErrorLog.txt
-.idea/.gitignore
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/SMARTSTUDIO.iml
-.idea/vcs.xml
-php/socket/SmartStudioErrorLog.txt
+.history
